// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalFooter renders correctly with a "Previous" button 1`] = `
<div>
  <div
    data-stylename="signup-modal-footer"
  >
    <div
      data-stylename="footer-buttons"
    >
      <span
        data-stylename="previous-button"
        onClick={[Function]}
      >
        Previous
      </span>
      <span
        data-stylename="continue-button"
        onClick={[Function]}
      >
        continueText
      </span>
    </div>
  </div>
  <div
    data-stylename="press-enter"
  >
    or press Enter
  </div>
</div>
`;

exports[`ModalFooter renders correctly without a "Previous" button 1`] = `
<div>
  <div
    data-stylename="signup-modal-footer"
  >
    <div
      data-stylename="footer-buttons"
    >
      <span
        data-stylename="continue-button"
        onClick={[Function]}
      >
        continueText
      </span>
    </div>
  </div>
  <div
    data-stylename="press-enter"
  >
    or press Enter
  </div>
</div>
`;
